internet-gw.tf
resource "aws_internet_gateway" "igw" {
    vpc_id = "${aws_vpc.vpc.id}"

    tags {
        "Name" = "igw-${var.environment}"
        "Use" = "Networking-${var.environment}"
        "Environment" = "${var.environment}"
    }
}
