vpc.tf
resource "aws_vpc" "vpc" {
    cidr_block           = "${var.vpc_block}"
    enable_dns_hostnames = true
    enable_dns_support   = true
    instance_tenancy     = "default"

    tags {
        "Use" = "${var.environment}"
        "Name" = "vpc-${var.environment}"
    }
}
